--- a/providers.html
+++ b/providers.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy:wght@400&display=swap" rel="stylesheet">
 
- <!-- Vendor CSS Files -->
+  <!-- Vendor CSS Files -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
@@ -82,7 +82,7 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1 class="heading-title">Menu</h1>
+              <h1 class="heading-title">Providers</h1>
 
             </div>
           </div>
@@ -90,21 +90,30 @@
       </div>
 
     </div>
-    <!-- Menu Section -->
-    <section id="menu-section" class="menu-section">
-
-      <div class="container section-title" data-aos="fade-up">
-        <img src="assets/img/BamMenu.jpg" align="center" alt="" width="95%" height="80%">
-        <img src="assets/img/BamTelugu.jpg" align="center" alt="" width="95%" height="80%">
-
-
-        
-      </div>
-
-        <iframe src="assets/img/Menu.pdf#toolbar=0&#view=fitH" type="application/pdf" width="100%" height="1125"></iframe>
-
-      </section>
     
+<!-- Providers Section -->
+<section id="providers" class="Providers section">
+
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <div><span>Collaborate with us as</span> <span class="description-title">Home Chefs</span></div>
+  </div><!-- End Section Title -->
+
+  <!-- Image Section -->
+  <div class="pic" align="center">
+    <img src="assets/img/Collab.png" class="img-fluid" alt="Collaborate with Home Thali">
+  </div>
+  <br>
+
+  <!-- Call to Action -->
+  <h2 align="center">
+    <a href="index.html#contact" class="cta-btn">Click Here</a> to apply to be a Home Chef
+  </h2>
+
+</section>
+<!-- End of Providers Section -->
+
+
   </main>
 
   <footer id="footer" class="footer dark-background">
