--- a/index.html
+++ b/index.html
@@ -212,13 +212,47 @@
     <section id="why-us" class="why-us section">
 
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Why Us</h2>
-        <div><span>Why choose</span> <span class="description-title">Our Service</span></div>
-        <br>
-        <img src="assets/img/Card.png" align="center" alt="" width="80%" height="60%">
-      </div><!-- End Section Title -->
+<!-- Section Title -->
+<div class="container section-title" data-aos="fade-up">
+  <h2>Why Us</h2>
+  <div><span>Why choose</span> <span class="description-title">Our Service</span></div>
+  <br>
+  <div class="why-choose">
+    <div class="row">
+      <!-- Left Column: Image -->
+      <div class="col-lg-6 image-container">
+        <img src="assets/img/why-us.jpg" alt="Why Us" class="img-fluid">
+      </div>
+
+      <!-- Right Column: Features -->
+      <div class="col-lg-6 features-container">
+        <div class="features">
+          <div class="feature">
+            <span>🌟</span>
+            <p>Freshness Guaranteed</p>
+          </div>
+          <div class="feature">
+            <span>🌿</span>
+            <p>Nourishing and Wholesome</p>
+          </div>
+          <div class="feature">
+            <span>👩‍🍳</span>
+            <p>Crafted with Love</p>
+          </div>
+          <div class="feature">
+            <span>✏️</span>
+            <p>On Your Customization</p>
+          </div>
+          <div class="feature">
+            <span>👨‍👩‍👧‍👦</span>
+            <p>Bringing Families Together</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
       <div class="container section-title" data-aos="fade-up">
         <div><span>How it</span> <span class="description-title">Works</span></div>
