--- a/specials.html
+++ b/specials.html
@@ -40,7 +40,7 @@
             <i class="bi bi-phone d-flex align-items-center d-none d-lg-block"><span>+91 9646065646</span></i>
             <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>All days: 07:00 AM - 09:00 PM</span></i>
           </div>
-          <a href="https://web.homethali.com/en/" class="cta-btn">Call 9646065646 to Order</a>
+          <a href="tel:+919646065646" class="cta-btn">Call 9646065646 to Order</a>
         </div>
     </div><!-- End Top Bar -->
 
