x and yt in all pages

--- a/specials.html
+++ b/specials.html
@@ -250,10 +250,10 @@
         <div class="col-lg-3 col-md-6">
           <h4>Follow Us</h4>
           <div class="social-links d-flex">
-            <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.x.com/HomeThali/" class="twitter"><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.facebook.com/HOMETHALI1/" class="facebook"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/homethali_guntur/" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.youtube.com/@HomeThali/" class="youtube"><i class="bi bi-youtube"></i></a>
           </div>
         </div>
 
